--- a/CSS/design.css
+++ b/CSS/design.css
@@ -28,7 +28,7 @@
 
 .mynav li:not(:last-child) {
     margin-right: 20px;
-    z-index: 999;
+    z-index: 10;
 }
 
 .mynav button {
@@ -44,7 +44,7 @@
 
 .target {
     position: absolute;
-    background-color: rgb(215, 215, 215);
+    background-color: rgb(196, 196, 196);
     border-radius: 20px;
     z-index: 1;
     transition: all 0.35s ease-in-out;
@@ -55,27 +55,143 @@
     background-color: rgba(255, 255, 0, 0);
     display: flex;
     justify-content: center;
-    padding-top: 4em;
+    padding-top: 2.5em;
 }
 .pckInfo1 {
     margin-top: 3em;
     background-color: white;
-    width: 90%;
-    height: 500px;
+    width: 95%;
+    height: auto;
     transition: 1;
 }
 
 .pckInfo2 {
     margin-top: 3em;
     background-color: white;
-    width: 90%;
+    width: 95%;
     height: 500px;
     display: none;
 }
 .pckInfo3 {
     margin-top: 3em;
     background-color: white;
-    width: 90%;
+    width: 95%;
     height: 500px;
     display: none;
+}
+@media (max-width: 600px) {
+  .pckContainer{
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+    background-color: grey;
+    display: flex;
+    overflow: hidden;
+
+  }
+  .sectionLeft{
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    height: auto;
+    padding-bottom: 1em;
+    
+}
+.sectionRight{
+    background-color: yellow;
+     width: 100%;
+     overflow-y: auto;
+}
+.pckInfo{
+    height: auto;
+    padding: 1.5em;
+    border-radius: 1.5em;
+    border: 1px solid rgb(165, 165, 165);
+    background-image: radial-gradient(circle at center center, transparent 0%,rgb(25, 25, 25) 99%),repeating-linear-gradient(0deg, rgba(163, 163, 163, 0.122) 0px, rgba(163, 163, 163, 0.083) 1px,transparent 2px, transparent 6px),repeating-linear-gradient(90deg, rgba(163, 163, 163, 0.12) 0px, rgba(163, 163, 163, 0.052) 1px,transparent 1px, transparent 6px),linear-gradient(90deg, rgba(33, 33, 33, 0.318),rgba(33, 33, 33, 0.367));
+}
+}
+
+
+
+@media (min-width: 600px) {
+    .pckContainer{
+        width: 100%;
+        height: auto;
+        position: relative;
+        display: flex;
+        background-color: grey;
+    }
+    .sectionLeft{
+        background-color: rgb(0, 0, 0);
+        width: 60%;
+        position: sticky;
+        top: 0;
+        padding-bottom: 1em;
+    }
+    .sectionRight{
+        background-color: yellow;
+         width: 40%; 
+         overflow-y: auto;
+         height: 3000px;
+         padding-bottom: 1em;
+    }
+    .pckInfo{
+        width: 90%; 
+        height: auto;
+        position: sticky;
+        top: 0;
+        background-image: radial-gradient(circle at center center, transparent 0%,rgb(25, 25, 25) 99%),repeating-linear-gradient(0deg, rgba(163, 163, 163, 0.122) 0px, rgba(163, 163, 163, 0.083) 1px,transparent 2px, transparent 6px),repeating-linear-gradient(90deg, rgba(163, 163, 163, 0.12) 0px, rgba(163, 163, 163, 0.052) 1px,transparent 1px, transparent 6px),linear-gradient(90deg, rgba(33, 33, 33, 0.318),rgba(33, 33, 33, 0.367));
+        height: auto;
+        padding: 1.5em;
+        border-radius: 1.5em;
+        border: 1px solid rgb(165, 165, 165);
+        padding-bottom: 1em;
+        top: 70;
+
+    }
+  }
+
+.InfoH1{
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.pckInfo hr{
+border: 0.3px solid rgb(165, 165, 165);
+width: 95%;
+margin-left: 0;
+}
+
+button{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 100;
+}
+
+.t1{
+font-size: 20px;
+line-height: 120%;
+color: white;
+}
+.t2{
+font-size: 15px;
+line-height: 1;
+color: rgb(165, 165, 165);
+font-family: PoppinsExtraLight;
+text-decoration: dashed;
+}
+
+.t3{
+font-style: italic;
+padding-top: 5px;
+color: rgb(0, 235, 16);
+font-size: 12px;
+text-shadow: 0 0 10px rgb(0, 221, 0);
+text-decoration: dotted;
+}
+
+.pckContact{
+    background-color: red;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: start;
+    justify-content: center;
 }
